syntax = "proto3";

package image;

option java_package = "image";
option java_outer_classname = "ImageServiceOuterClass";

service ImageService {
  rpc SaveImage (SaveImageRequest) returns (SaveImageResponse);
  rpc GetImages (GetImagesRequest) returns (GetImagesResponse);
}

message SaveImageRequest {
  int64 incident_id = 1;
  bytes file_data = 2;
  int64 size = 3;
  string type = 4;
}

message SaveImageResponse {
  int64 image_id = 1;
  string url = 2;
}

message GetImagesRequest {
  int64 incident_id = 1;
}

message GetImagesResponse {
  repeated ImageData images = 1;
}

message ImageData {
  int64 incident_id = 1;
  string file_name = 2;
  bytes file_data = 3;
  string type = 4;
  int64 size = 5;
}
